src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  .active {
    @apply relative;
    @apply after:absolute;
    @apply after:bottom-0;
    @apply after:bg-white;
    @apply after:h-0.5;
    @apply after:w-full;
    @apply after:rounded-full;
  }

  .scrolled {
    @apply bg-[#7258FF];
    @apply drop-shadow-2xl;
    @apply shadow-lg;
  }

  :target:not(#home):before {
    content: "";
    display: block;
    height: 121px;
    margin: -121px 0 0;
  }
}

html {
  scroll-behavior: smooth;
}

*::-webkit-scrollbar {
  width: 8px;

}

*::-webkit-scrollbar-thumb {
  background-color: #7258FF;
  border-radius: 10px;
}

